# voice_changer_realtime

./: .env.example  .gitignore  README.md  pyproject.toml
src/voice_changer/: __init__.py  __main__.py  audio_devices.py  capture.py  cli.py  config.py  fast_pipeline.py  pipeline.py  playback.py  ptt.py  resemble_pipeline.py  transformer.py  vad.py
tests/: test_config.py  test_e2e.py  test_fast_pipeline.py  test_resemble_pipeline.py  test_vad.py
